Preventing the link on the collapsable panel heading become invisible.

--- a/src/Registry/root/static/css/site.css
+++ b/src/Registry/root/static/css/site.css
@@ -44,6 +44,10 @@ h3.panel-title {
   font-weight: bold;
 }
 
+.panel-heading > a {
+  color: #ffffff;
+}
+
 .close {
   color: #5bc0de;
 }
